Fix table scrollbar

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -65,7 +65,7 @@ img
   height: auto
 
 table
-  display: inline-block
+  display: table
   max-width: 100%
   overflow-y: scroll
   border-spacing: 1px
